# vista

./: Cargo.toml  README.md
examples/: arr1.rs  arr1s.rs  arr2.rs  arr2s.rs  arr3.rs  arr3s.rs  arr4.rs  arr4s.rs
src/: display_array.rs  display_ext.rs  lib.rs
src/display_method/: comma_separated.rs  common.rs  double_joined.rs  formatter.rs  joined.rs  mod.rs  separated.rs
